--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
+sudo: required
 language: C
+
+install:
+- sudo apt-get update -qq
+- sudo apt-get install -qq libx11-xcb-dev libxcb-randr0-dev libxcb-keysyms1-dev libxcb-icccm4-dev libxcb-ewmh-dev libxcb-util-dev libcairo2-dev libpangocairo-1.0-0
+
+script:
+- make
