--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: C
 
 install:
 - sudo apt-get update -qq
-- sudo apt-get install -qq libx11-xcb-dev libxcb-randr0-dev libxcb-keysyms1-dev libxcb-icccm4-dev libxcb-ewmh-dev libxcb-util0-dev libcairo2-dev libpango1.0-dev libpangocairo-1.0-0
+- sudo apt-get install -qq libx11-xcb-dev libxcb-randr0-dev libxcb-keysyms1-dev libxcb-icccm4-dev libxcb-ewmh-dev libxcb-util0-dev libcairo2-dev libpango1.0-dev libpangocairo-1.0-0 check
 
 script:
 - make
+- make test
